# smbc-crawl

./: README.md  list_of_images.txt  main.py  output.py  pyproject.toml
smbc_crawl/: parselist.py  quests.py
tests/: test_smbc_crawl.py
